fix: `.WizardLayout__alerts` was too wide

--- a/src/scss/WizardLayout.scss
+++ b/src/scss/WizardLayout.scss
@@ -15,7 +15,7 @@
 	.WizardLayout__alerts {
 		max-height: 1000px;
 		overflow: hidden;
-		margin: 0 prem(-15);
+		margin: 0 prem(-10);
 		transition: max-height 400ms ease-in;
 
 		@include media($mq-tablet_up) {
@@ -60,7 +60,7 @@
 @media #{$mq-phone_phablet} {
 	body {
 		padding-left: prem(16);
-		padding-right: prem(16);
+		padding-right: calc(#{prem(16)} - #{$var--browser-scrollbar-width});
 	}
 	.WizardLayout__wrap {
 		padding-left: prem(48);
@@ -75,8 +75,7 @@
 }
 
 @media #{$mq-tablet_up} {
-	.WizardLayout,
-	.WizardLayout__content {
+	.WizardLayout {
 		position: static;
 	}
 	.WizardLayout__header {
@@ -84,8 +83,13 @@
 		padding-right: prem(16);
 	}
 
+	.WizardLayout__alerts {
+		margin-left: prem(8);
+		max-width: cols_px(9, 9);
+	}
+
 	.WizardLayout__wrap {
-		width: cols_pct(10);
+		width: $var--grid-10;
 		display: flex;
 		padding-left: prem(16);
 	}
